update revisi
